--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.2",
-    "react": "^19.1.1"
+    "react": "^19.1.1",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^4.1.12"
   }
 }
